# pytexas-mcp-demo

./: .env.example  .gitignore  README.md  pyproject.toml  run_demo.py  structure.txt
agent/: approval.py  client.py  decision.py  internal_client.py  models.py  policy.py  prompts.py  validator.py  workflow.py
data/: orders.db  untrusted_demo.db
data/seed/: allowed_domains.json  customers.json  orders.json  untrusted_accounts.json
docs/: logging-gap-checklist.md  raw-vs-fastmcp-comparison.md
scripts/: create_customer_strategy_table.py  reset_demo_logs.py  run_inspector_fastmcp.sh  run_inspector_raw.sh  run_untrusted_demo.sh  seed_untrusted_demo.py
servers/fastmcp_server/: middleware.py  server.py
servers/raw_mcp/: dispatcher.py  handlers.py  protocol.py  server.py
servers/untrusted_demo_server/: middleware.py  schemas.py  server.py  untrusted_data_access.py
shared/: audit.py  config.py  contact_lookup.py  db.py  demo_presenter.py  policy.py  sanitize.py  schemas.py  seed.py
shared/services/: customer.py  customer_strategy.py  customers.py  email.py
streamlit_app/: app.py
tests/: test_demo_cases.py  test_policy.py  test_sanitize.py
