[project]
name = "pytexas-mcp-demo"
version = "0.1.0"
description = "MCP raw vs FastMCP demo with policy, logging, and inspector"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
